INCLUDES = 
METASOURCES = AUTO
sbin_SCRIPTS = batchTruncate.py combinePosteriors.py comparePosterior.py \
	createComScripts.py createConfScripts.py createMPIScript.py createSpeciesCov.py epiSize.py \
	fakeMCMC.py getNumInfecs.py getPosteriorMeans.py infecFreq.py outputParser.py \
	simMangle.py truncateSim.py countNetDegree.py
