INCLUDES = -I$(top_srcdir)/src/data
METASOURCES = AUTO
bin_PROGRAMS = contactTest triangle2full
contactTest_LDADD = $(top_builddir)/src/data/libepiData.la
contactTest_SOURCES = main.cpp

triangle2full_SOURCES = triangle2full.cpp
triangle2full_LDADD = $(top_builddir)/src/data/libepiData.la

#contactCheck_SOURCES = contactCheck.cpp
#contactCheck_LDADD = $(top_builddir)/src/data/libepiData.la

